# technopark-highload-webserver

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  httpd.conf  main.cc  nginx.conf  run.sh
server/: CMakeLists.txt
server/inc/private/: http.hh
server/inc/server/: config.hh  file.hh  handler.hh  http.hh  server.hh  thread.hh
server/inc/server/interface/: i-task-manager.hh
server/src/: config.cc  file.cc  handler.cc  http.cc  server.cc  thread.cc
